fix(index): Fix overflow of text card content and general improvements
Fixed overflow by allowing the board text content to be scrollable. Updated the text content for the cards as well.
Improved responsive layout by using computed utility classes instead of fixed dimensions for the board cards.
Minor housekeeping: Updated the mailto address in footer. Changed the main image for the "about school" board to avoid copyright infringement.Fixed the hyperlink to Resume page.

--- a/styles/input.css
+++ b/styles/input.css
@@ -30,6 +30,16 @@
     @apply p-2;
 }
 
+/*for index.php --text-card-specific styling*/
+.text-card{
+    @apply p-7;
+}
+
+/*for index.php --spaxcing between list items*/
+.list-gap{
+    @apply m-2.5;
+}
+
 /*for custom variables
  -portfolio palette colors*/
 :root{
